[package]
name = "chatnet"
version = "0.1.0"
authors = ["axepeartree <joaoeduardo.smp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
futures = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.9.0", features = ["full"] }
tokio-serde = { version = "0.8.0", features = ["json"] }
tokio-util = { version = "0.6.7", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"